[project]
    authors=[{name="Sckathach", email="thomas.winninger@telecom-sudparis.eu"}]
    dependencies=["jupyter (>=1.1.1,<2.0.0)", "transformer-lens (>=2.15.0,<3.0.0)"]
    description=""
    name="causapscal-des-vents"
    readme="README.md"
    requires-python=">=3.13,<4.0"
    version="0.1.0"

[build-system]
    build-backend="poetry.core.masonry.api"
    requires=["poetry-core>=2.0.0,<3.0.0"]

[tool.poetry.group.dev.dependencies]
    mypy="^1.15.0"
    ruff="^0.11.8"

[tool.poetry]
    package-mode=false

[[tool.mypy.overrides]]
    ignore_missing_imports=true
    module=["transformer_lens.*"]

[tool.pyright]
    ignore=["transformer_lens"]
